
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int close (int) ;
 int exit (int) ;
 int fprintf (int ,char*,char*) ;
 char* in ;
 int memset (char*,char,int) ;
 int perror (char*) ;
 int recv (int,char*,int,int ) ;
 int stderr ;

void getline(int s)
{
 memset(in, '\0', sizeof in);
 if (recv(s, in, sizeof in, 0) < 1) {
  perror("recv");
  close(s);
  exit(1);
 }

 fprintf(stderr, "<\t%s", in);
}
